--- a/.air.toml
+++ b/.air.toml
@@ -3,17 +3,17 @@ testdata_dir = "testdata"
 tmp_dir = "tmp"
 
 [build]
-  bin = "tmp\\main.exe"
-  cmd = "go build -o ./tmp/main.exe ."
+  bin = "./tmp/main"
+  cmd = "go build -o ./tmp/main ."
   delay = 1000
-  exclude_dir = ["data", "node_modules"]
+  exclude_dir = [".history", ".vscode"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html"]
+  include_ext = ["go"]
   kill_delay = "0s"
   log = "build-errors.log"
   send_interrupt = false
